--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.login.mobi.loginapp">
+    package="com.login.mobi.Assignment9">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.login.mobi.Assignment9.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserActivity" android:screenOrientation="portrait" />
-        <activity android:name=".SignUpActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.login.mobi.Assignment9.UserActivity" android:screenOrientation="portrait" />
+        <activity android:name="com.login.mobi.Assignment9.SignUpActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
